# HERMES

./: .gitignore  AGENTS.md  README.md  pixi.toml  pyproject.toml
.github/: copilot-instructions.md
backends/unpackers/tpx3-spidr/: README.md  check_sorting.py
backends/unpackers/tpx3-spidr/cpp/: CMakeLists.txt  Notes.md
backends/unpackers/tpx3-spidr/cpp/inc/: chunk_reader.h  dataPacketProcessor.h  diagnostics.h  output_rows.h  packet_types.h  parquet_schemas.h  parquet_writer.h  photonRecon.h  summary_json.h  time_sort.h  timestamp_calculator.h  unpacker.h
backends/unpackers/tpx3-spidr/cpp/src/: chunk_reader.cpp  commandLineParser.cpp  dataPacketProcessor.cpp  diagnostics.cpp  parquet_schemas.cpp  parquet_writer.cpp  photonRecon.cpp  summary_json.cpp  time_sort.cpp  timestamp_calculator.cpp  tpx3SpidrUnpacker.cpp  unpacker.cpp
backends/unpackers/tpx3-spidr/cpp/tests/: check_sorting.py  diagnostics_tests.cpp  packet_tests.cpp  stream_tests.cpp  test_helpers.h  time_sort_tests.cpp  timestamp_tests.cpp  workflow_tests.cpp
data/: README.md
docs/: HERMES Manual.docx  HERMES_Manual.docx  ROADMAP.md  SERVAL_API_Documentation.md  architecture.md  ~$RMES Manual.docx
docs/architecture/: acquisition.md  analysis.md  artifacts.md  environment.md  general.md  io.md  logging_instructions.md  open-questions.md  state-model.md  state-service.md  unpacker.md  workflows.md
examples/: HERMES Manual.docx
examples/analysis/unpacker/: run_unpacker.py
examples/analysis/unpacker_multiple_files/: README.md  run_unpacker_mf.py
examples/analysis/unpacker_single_file/: README.md
examples/demo_scripts/acquisition/factories/: serval_factory_demo.py
examples/demo_scripts/acquisition/models/: environment_demo.py
examples/demo_scripts/acquisition/services/: environment_service_demo.py
examples/notebooks/: analysis_hermes.ipynb  analysis_hermes_folder.ipynb
examples/scripts/Acquisition/Configure/: configure.py
examples/scripts/Acquisition/FullSend/: server_config.ini
examples/scripts/Pymepix/: pymepix_connection_test.py
examples/scripts/Serval/: .gitignore  README.md  SUMMARY.md  example_config.ini  initial_serval_check.py  serval_http_demo.py
examples/scripts/acquire_data/: README.md  acquireTpx3.ini  acquireTpx3.py  server_config.ini
examples/scripts/acquire_data/daq_simple/: acquireTpx3.py
examples/scripts/aquire_data/daq_simple/: aquireTpx3.py
src/chermes/: .gitignore  Makefile  Notes.md  unpacker.config
src/chermes/inc/: commandLineParser.h  structures.h
src/chermes/src/: commandLineParser.cpp  configReader.cpp  dataPacketProcessor.cpp  photonRecon.cpp  tpx3SpidrUnpacker.cpp
src/hermes/: __init__.py  _version.py
src/hermes/acquisition/: README.md  acquire.py  acquisiton.py  calibrate.py  configure.py  initialize.py  logger.py  logging.py  models.py  serval.py  setup.py  tpx3acquire.py  tpx3logging.py  tpx3serval.py  tpx3zaber.py  utils.py  zaber.py
src/hermes/acquisition/factories/: serval.py  serval_factory.py
src/hermes/acquisition/legacy/: models.py
src/hermes/acquisition/models/: environment.py  schema.py  serval.py  zabers.py
src/hermes/acquisition/models/config/: environment.py  parameters.py
src/hermes/acquisition/models/hardware/: tpx3Cam.py  zabers.py
src/hermes/acquisition/models/software/: environment.py  epics.py  parameters.py  serval.py
src/hermes/acquisition/models/tpx_serval/: common.py  dashboard.py  destinations.py  detector.py  measurement.py
src/hermes/acquisition/serval/: models.py
src/hermes/acquisition/services/: base.py  environment.py  exceptions.py  serval.py
src/hermes/acquisition/services/direct/: serval_http_client.py  serval_process_manager.py
src/hermes/acquisition/services/interfaces/: camera_interface.py
src/hermes/analysis/: analyzer.py  exporter.py  loader.py  loader_old.py  plotter.py  plotter_old.py  reader.py
src/hermes/analysis/hermes/: run.py  unpacker.py
src/hermes/deprecated/: acquire.py
src/hermes/deprecated/daq_ctscan/: ctScan_zaber.py
src/hermes/deprecated/empir/: configure.py  logger.py  process.py
src/hermes/empir/: __init__.py  config.py  configure.py  exporter.py  models.py  process.py  runner.py
src/hermes/state/: state.py
src/hermes/state/models/: detector.py  environment.py  measurement.py  payloads.py  shared_models.py
src/hermes/state/models/acquisition/: serval.py
src/hermes/state/models/analysis/: empir.py  hermes_tpx3_spidr.py
src/hermes/state_service/: change_requests.py  payload_store.py  shared_types.py  state_io.py  state_logger.py  state_manager.py
src/hermes/utils/: logger.py
tests/data/: Example_1kHz_5frames.tpx3
tests/hermes/state/: test_state.py
tests/hermes/state/models/: test_detector.py  test_hermes_tpx3_spidr.py  test_payloads.py  test_serval.py
tests/hermes/state_service/: test_change_requests.py  test_payload_store.py  test_shared_types.py  test_state_io.py  test_state_logger.py  test_state_manager.py
tests/unit/hermes/acquisition/: test_configure.py
tests/unit/hermes/acquisition/factories/: test_serval_factory.py
tests/unit/hermes/acquisition/models/: test_schema.py
tests/unit/hermes/acquisition/models/software/: test_environment.py  test_parameters.py  test_serval.py
tests/unit/hermes/acquisition/services/: test_environment_service.py  test_serval_service.py
tests/unit/hermes/analysis/hermes/: test_unpacker.py  test_unpacker_integration.py
tests/unit/hermes/state/models/: test_empir.py  test_environment.py  test_hermes_tpx3_spidr.py  test_measurement.py
tests/unit/hermes/state_service/: test_change_requests.py  test_shared_types.py  test_state_io.py
