[project]
authors = [{name = "Alexander M. Long", email = "alexlong@lanl.gov"}]
dependencies = []
name = "HERMES"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-options]
index-url = "https://nexus.lanl.gov/repository/python/simple"
extra-index-urls = ["https://pypi.org/simple"]

[tool.pixi.pypi-dependencies]
hermes = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.4,<3.15"
pydantic = ">=2.13.3,<3"

[tool.pixi.feature.dev.dependencies]
pytest = "*"
